--- a/index.html
+++ b/index.html
@@ -1,11 +1,151 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-theme="light">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alphabets Game</title>
-</head>
-<body>
-   
-</body>
+
+    <link rel="stylesheet" href="styles/style.css" />
+
+    <!-- daisy Ui Design -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+
+  <body>
+    <main
+      class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-top bg-auto"
+    >
+      <section id="play-now">
+        <div
+          class="flex flex-col justify-center items-center min-h-screen gap-10"
+        >
+          <h1 class="text-8xl text-white font-extrabold">ALPHABET CLASH</h1>
+          <p class="text-2xl text-white font-semibold">
+            Unleash Your Keyboard Kung Fu : Press “Enter” to Play
+          </p>
+          <button onclick="enterPlay()"
+            class="text-2xl font-bold bg-white p-5 rounded-2xl hover:bg-sky-400"
+          >
+            Play Now
+          </button>
+        </div>
+      </section>
+      <section id="play-ground" class="hidden">
+        <div
+          class="flex flex-col justify-center items-center min-h-screen gap-5 pt-10"
+        >
+          <div class="w-3/4 border bg-[#FFFFFFB3] rounded-2xl">
+            <p
+              class="text-center bg-black text-white m-auto w-max rounded-b-lg p-4 pt-2"
+            >
+              Don't watch keyboard while playing...
+            </p>
+            <div class="">
+              <p id="random-alphabet" class="text-6xl p-3 text-center font-semibold uppercase">Y</p>
+            </div>
+          </div>
+
+          <div class="lg:text-2xl uppercase">
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd id="q" class="kbd">q</kbd>
+              <kbd id="w" class="kbd">w</kbd>
+              <kbd id="e" class="kbd">e</kbd>
+              <kbd id="r" class="kbd">r</kbd>
+              <kbd id="t" class="kbd">t</kbd>
+              <kbd id="y" class="kbd">y</kbd>
+              <kbd id="u" class="kbd">u</kbd>
+              <kbd id="i" class="kbd">i</kbd>
+              <kbd id="o" class="kbd">o</kbd>
+              <kbd id="p" class="kbd">p</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd id="a" class="kbd">a</kbd>
+              <kbd id="s" class="kbd">s</kbd>
+              <kbd id="d" class="kbd">d</kbd>
+              <kbd id="f" class="kbd">f</kbd>
+              <kbd id="g" class="kbd">g</kbd>
+              <kbd id="h" class="kbd">h</kbd>
+              <kbd id="j" class="kbd">j</kbd>
+              <kbd id="k" class="kbd">k</kbd>
+              <kbd id="l" class="kbd">l</kbd>
+            </div>
+            <div class="flex justify-center gap-1 my-1 w-full">
+              <kbd id="z" class="kbd">z</kbd>
+              <kbd id="x" class="kbd">x</kbd>
+              <kbd id="c" class="kbd">c</kbd>
+              <kbd id="v" class="kbd">v</kbd>
+              <kbd id="b" class="kbd">b</kbd>
+              <kbd id="n" class="kbd">n</kbd>
+              <kbd id="m" class="kbd">m</kbd>
+              <kbd id="/" class="kbd">/</kbd>
+            </div>
+          </div>
+          <div class="m-auto w-3/4 flex justify-between">
+            <button class="btn bg-[#894189] text-white">
+              Button
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-auto w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
+            <button class="btn bg-[#360490] text-white">
+              Button
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-auto w-6"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
+                />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </section>
+      <section class="hidden">
+        <div class="flex flex-col justify-center items-center min-h-screen">
+          <div
+            class="m-auto text-center w-max h-max border p-10 bg-[#FFFFFF8F,#989797] rounded-xl"
+          >
+            <h1 class="text-6xl font-bold text-white">
+              Score : <span>14</span>
+            </h1>
+            <button
+              class="text-xl font-bold bg-white p-2 rounded hover:bg-sky-400 mt-5 mb-5"
+            >
+              Play Now
+            </button>
+            <p class="text-white text-xl font-medium">
+              Practice will make you Pro
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+<script src="/script.js"></script>
+<script src="/game.js"></script>
+
+  </body>
 </html>
